--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f55bc993990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8b5f0a06d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f55bc6a45d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f55bc6a1c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b58a7ab90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b58a7ad90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f55bcc04050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f55bcc10550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8b59307510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8b59307710&gt;]</pre>
 </div>
 
 </div>
