--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1677f949d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b575a53d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1677fcebd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1677fcedd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b57265b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b57265d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1678210490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1678210690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b57838490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b57838690&gt;]</pre>
 </div>
 
 </div>
