--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5f66d836d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7eff892bb750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f66ab2d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5f66ab2f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7eff88fe9c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7eff88fe9e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f67007690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5f67007890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7eff8953e610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7eff8953e810&gt;]</pre>
 </div>
 
 </div>
