--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f806e775150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1677be9cd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f806e4a6b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f806e4a6d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1677644d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1677976a50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f806e9fd3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f806e9fd5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1677ecf590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1677f1b750&gt;]</pre>
 </div>
 
 </div>
