--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fba61e51a90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2d49a4f850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba61b67e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba61b67fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d49a91fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d49a8f210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fba620df7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fba620df9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d49cde8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2d49cdead0&gt;]</pre>
 </div>
 
 </div>
