--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2d49a4f850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8c831078d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d49a91fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2d49a8f210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c82e29ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8c82e29cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d49cde8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2d49cdead0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c833a5410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8c833a5610&gt;]</pre>
 </div>
 
 </div>
