--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e1174da50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f07366afa50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e11143ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e11421fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0736396d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0736396f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e117738d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e119f18d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0736958650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0736958890&gt;]</pre>
 </div>
 
 </div>
