--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6866efb7d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbae2850a10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68672473d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6867251e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbae255aed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbae2578110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6867487690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6867492790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbae2ad3990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbae2ad3b90&gt;]</pre>
 </div>
 
 </div>
