--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5fb490abd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b2fcc5550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5fb4311bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5fb4311dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b2f9f3bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0b2f9f3dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5fb4b9b510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5fb4b9b710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b2ff4a510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0b2ff4a710&gt;]</pre>
 </div>
 
 </div>
