--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb19118450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2df849a610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb1988de90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb1987c0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2df81c6d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2df81c6f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb19aca990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb19acab90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2df871c590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2df871c790&gt;]</pre>
 </div>
 
 </div>
