--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc33dedc490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7617ea66d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc33dbf8d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc33dbf8f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7617b90e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7617b90fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc33e167690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc33e167890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f761811a650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f761811a850&gt;]</pre>
 </div>
 
 </div>
