--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdd68cd5390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f52ca9c8690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd68a19d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd68a19f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f52ca6f8b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f52ca6f8d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdd692a8690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdd692a8890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f52cac4f450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f52cac4f650&gt;]</pre>
 </div>
 
 </div>
