--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc0e58acf10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7effa4f76c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0e529bd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0e529bf90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7effa496cb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7effa496cd90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0e5b1f710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc0e5b1f910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7effa51eb550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7effa51eb750&gt;]</pre>
 </div>
 
 </div>
