--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4523e2eb50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb358db3510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4523832e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4523832fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb358aeac50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb358aeae50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f45240ba6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f45240ba8d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3590a6590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb3590a6790&gt;]</pre>
 </div>
 
 </div>
