--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc18c449250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb033a8ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc18c180d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc18c180f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb030dab50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb030dad50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc18c722b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc18c6d6790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb0367c710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb03631690&gt;]</pre>
 </div>
 
 </div>
