--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb033a8ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f690707b890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb030dab50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb030dad50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6906d9cc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6906d9ce90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb0367c710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb03631690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f690730c510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f690730c710&gt;]</pre>
 </div>
 
 </div>
