--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f12f904b450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda146ad150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f12f8a3bdd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f12f8a3bfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda143ddb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda143ddd90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f12f92c4750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f12f92c4950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fda14934490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fda14934690&gt;]</pre>
 </div>
 
 </div>
