--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda146ad150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f714a043090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda143ddb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda143ddd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7149d30e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7149d30fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda14934490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda14934690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f714a2ba6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f714a2ba8d0&gt;]</pre>
 </div>
 
 </div>
